# le-hotkey

./: README.md  config.html  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
.cargo/: config.toml
src/: App.svelte  Config.svelte  config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  macropad.rs  main.rs  model.rs
src/components/: Dropdown.svelte  EditableText.svelte  IconButton.svelte  Keyboard.svelte  MacroRecord.svelte  Swap.svelte
