[package]
name = "hotkeys"
version = "0.0.0"
description = "Hotkey Manager"
authors = ["jmkl"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-set-size", "window-start-dragging", "fs-read-file",  "system-tray", "fs-write-file", "fs-read-dir", "fs-create-dir", "fs-exists", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.1.3"
global-hotkey = "0.5.1"
window-vibrancy = "0.4.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
